--- a/bfs_um/README
+++ b/bfs_um/README
@@ -1,2 +1,5 @@
+Place this foler under rodinia_3.1/cuda/bfs_um and compile with 'make'
+
+
 The original BFS CUDA code was obtained from Pawan Harish and P. J. Narayanan at IIIT, 
 who have given us permission to include it as part of Rodinia under Rodinia's license.
