Update bfs README

--- a/bfs_um/README
+++ b/bfs_um/README
@@ -1,5 +1,8 @@
 Place this foler under rodinia_3.1/cuda/bfs_um and compile with 'make'
 
-
 The original BFS CUDA code was obtained from Pawan Harish and P. J. Narayanan at IIIT, 
 who have given us permission to include it as part of Rodinia under Rodinia's license.
+
+Caliper:
+
+To build the Caliper version, modify Makefile and set CALIPER_DIR to a Caliper installation directory.
